# parallel-nsgaII-backend

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.95923b0  Checkpoint.hpp  Checkpoint.hpp.autosave  Comparator.hpp  Crossover.hpp  DebsCrowdingDistance.hpp  DebsNondominatedSorting.hpp  Evaluation.hpp  Evaluation.hpp.autosave  Individual.hpp  Merge.hpp  MinOrMax.hpp  Mutation.hpp  NSGAII-CE.hpp  NSGAII-base.hpp  NSGAII.hpp  NSGAII.hpp.autosave  ParallelEvaluator.hpp  ParallelEvaluator.hpp.autosave  ParallelEvaluatorClient.hpp  ParallelEvaluatorServer.hpp  PlotFronts.hpp  Population.cpp  Population.hpp  ProblemDefinitions.hpp  README.md  Selection.hpp  TestFunctions.hpp  colours.hpp  parallel_nsgaII_backend.cpp  parallel_nsgaII_backend.hpp  parallel_nsgaII_backendPriv.hpp
Checkpoints/: BoolTerminateCheckpoint.hpp  CMakeLists.txt  MailCheckpoint.hpp  MaxGenCheckpoint.hpp  MetricChart.cpp  MetricChart.h  MetricLinePlot.hpp  PlotFronts.hpp  ResetMutationXoverFlags.hpp  SaveFirstFrontCheckpoint.hpp  SavePopCheckpoint.hpp  SerialiseCheckpoint.hpp  SignalCheckpoint.hpp  SignalHandler.cpp  SignalHandler.hpp  colours.hpp  dummy.h  serialisecheckpoint.hpp  serialisecheckpoint.hpp.autosave
Deprecated/: CMakeLists.txt.user.a3303c6  DebsNondominatedSorting.cpp  NSGAII.cpp  Population.cpp  Types.hpp
Metrics/: Hypervolume.hpp  MetricBase.hpp  hv.c
PostRunProcessing/: PlotParetoFront.R  ReadPopulation.R
SampleProblems/: TestFunctions.hpp
Serialization/: CMakeLists.txt  SerializeBoostPath.hpp  SerializeRng.hpp
tests/: CMakeLists.txt  DebsPolynomialMutationTester.cpp  DebsSBXCrossoverTester.cpp  TestDebsCrowdingDistance.cpp  TestFON.cpp  TestFonParallel.cpp  TestIntCrossover.cpp  TestIntMinParallel.cpp  TestIntMinSerial.cpp  TestIntMutAndCross.cpp  TestNSGAII_FON.cpp  TestParallelEvaluator.cpp  TestParallelSpeedup.cpp  TestUniformIntMutation.cpp  testserialisation.cpp
